--- a/back/templates/login.html
+++ b/back/templates/login.html
@@ -169,7 +169,7 @@
       }
       , body: JSON.stringify({
         username: id.value,
-        passwords: pwd.value,
+        password: pwd.value,
         remember: remember.checked ? 1 : 0
       })
     }).then(e => {
