--- a/back/templates/login.html
+++ b/back/templates/login.html
@@ -182,8 +182,8 @@
     }).then(e => {
       localStorage.username = e.username;
       localStorage.permission = e.permission;
-      location.reload();
-      // setTimeout(() => location.href = 'index.html')
+      // location.reload();
+      setTimeout(() => location.href = 'index.html')
     }).catch(err => console.log(err))
   }
 </script>
