--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="">
 
 <head>
   <meta charset="UTF-8">
@@ -212,6 +212,7 @@
       <button disabled><span id="upload">上传</span>
         <div id="circleParent">
           <div id='circle'></div>
+        </div>
       </button>
       <div id="result">
         <hr>
@@ -229,7 +230,6 @@
     <!-- <div class='frame'> -->
 
     <!-- </div> -->
-  </div>
   </div>
 
   <span id="sideButton">
