--- a/back/templates/manager.html
+++ b/back/templates/manager.html
@@ -13,6 +13,7 @@
       box-sizing: border-box;
       text-align: center;
       color: #fff;
+      font-family: 'Comic Sans MS';
     }
 
     table {
@@ -74,9 +75,20 @@
     input,
     select,
     textarea,
-    option {
+    option,
+    body>div:nth-child(2)>span:nth-child(2) {
       font-size: 2vmax;
       /* padding: 0 1em; */
+    }
+
+    body>div:nth-child(2)>span:nth-child(2) {
+      margin: 0 2em;
+    }
+
+    body>div:nth-child(2)>span:nth-child(2)>strong {
+      color: gold;
+      font-size: 3vmax;
+      margin: 0 9q;
     }
 
     button {
@@ -101,6 +113,10 @@
       margin-bottom: 8px;
       font-size: 3vmax;
     }
+
+    button.page:first-of-type {
+      visibility: hidden;
+    }
   </style>
 </head>
 
@@ -119,11 +135,63 @@
       <th>操作</th>
     </tr>
   </table>
+  <div><button class="page">上一页</button><span>第<strong></strong>页</span><button class="page">下一页</button></div>
+
   <!-- </div> -->
 </body>
 
 </html>
 <script>
+  let store = {}
+  let pageIndex = 0;
+  let maxpageIndex = 0;
+  const numInEveryPage = 5;
+  const pagesButton = document.getElementsByClassName('page');
+  pagesButton[0].onclick = () => {
+    pageIndex--;
+    loadContent();
+  }
+  pagesButton[1].onclick = () => {
+
+    pageIndex++;
+    loadContent();
+  }
+  function loadContent () {
+    if (pageIndex == 0) {
+      pagesButton[0].style.visibility = 'hidden';
+    }
+    else {
+      pagesButton[0].style.visibility = 'visible';
+    }
+    if (pageIndex == maxpageIndex) {
+      pagesButton[1].style.visibility = 'hidden';
+    }
+    else {
+      pagesButton[1].style.visibility = 'visible';
+    }
+    const trs = table.querySelectorAll('tr')
+    for (let i = 1; i < trs.length; i++) {
+      trs[i].remove()
+    }
+    setTimeout(() => {
+      document.querySelector('body > div:nth-child(2) > span:nth-child(2) > strong:nth-child(1)').innerText = pageIndex + 1;
+      store.users.forEach((item, index) => {
+        if (index < pageIndex * numInEveryPage || index > pageIndex * numInEveryPage + numInEveryPage - 1) return;
+        const tr = document.createElement('tr');
+        tr.innerHTML = `
+        <td style='display:none'>${item.id}</td>
+        <td>${item.username}</td>
+        <td>${item.password}</td>
+        <td>${item.permission == 1 ? "普通用户" : "管理员"}</td>
+        <td><button onclick="del(${item.id})">删除</button><button onclick="modify(${item.id},this)">修改</button></td>
+      `
+        table.appendChild(tr);
+      })
+      const tr = document.createElement('tr')
+      tr.innerHTML = `<td><input placeholder=姓名></td><td><input placeholder=密码></td><td>${selectStr}</td><td><button onclick="add(this)">添加</button></td>`
+      table.appendChild(tr)
+    })
+  }
   const toggle = params => {
     let p = document.createElement("b")
     p.innerHTML = params
@@ -134,34 +202,22 @@
     p.onclick = () => p.remove()
   }
   function checkString (str, reg) {
-    var regex = /^[a-zA-Z0-9]*$/;
     return !reg.test(str);
   }
-  const selectStr = '<select><option value="请选择">请选择</option><option value="0">管理员</option><option value="1">普通用户</option></select>'
+  // const selectStr = '<select><option value="请选择">请选择</option><option value="0">管理员</option><option value="1">普通用户</option></select>'
+  const selectStr = '普通用户'
   const table = document.querySelector('table');
   const tableFetch = () =>
     fetch('api/all').then(e => e.json()).then(e => {
-      const trs = table.querySelectorAll('tr')
-
-      for (let i = 1; i < trs.length; i++) {
-        trs[i].remove()
+      store = e;
+      if (e.length == 0) {
+        toggle('暂无数据')
       }
-      setTimeout(() => {
-        e.users.forEach(item => {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-        <td style='display:none'>${item.id}</td>
-        <td>${item.username}</td>
-        <td>${item.password}</td>
-        <td>${item.permission == 1 ? "普通用户" : "管理员"}</td>
-        <td><button onclick="del(${item.id})">删除</button><button onclick="modify(${item.id},this)">修改</button></td>
-      `
-          table.appendChild(tr);
-        })
-        const tr = document.createElement('tr')
-        tr.innerHTML = `<td><input placeholder=姓名></td><td><input placeholder=密码></td><td>${selectStr}</td><td><button onclick="add(this)">添加</button></td>`
-        table.appendChild(tr)
-      })
+      maxpageIndex = Math.ceil(store.users.length / numInEveryPage) - 1
+      if (maxpageIndex == 0) {
+        pagesButton[1].style.visibility = 'hidden';
+      }
+      loadContent();
     })
   function del (id) {
     if (!confirm('确定删除？')) return;
@@ -172,8 +228,13 @@
       },
       body: JSON.stringify({ id: id })
     }).then(e => e.json()).then(e => {
-      toggle('删除成功')
-      tableFetch()
+      if (e.code == 200) {
+        toggle('删除成功')
+        tableFetch()
+      }
+      else {
+        toggle('删除失败')
+      }
     }).catch(e => {
       toggle('删除失败')
     })
@@ -189,7 +250,7 @@
     const select = tds[3]
     const selectData = select.innerText
     select.innerHTML = selectStr
-    select.querySelector('select').value = selectData == "管理员" ? "0" : "1"
+    // select.querySelector('select').value = selectData == "管理员" ? "0" : "1"
   }
   function save (id, e) {
     fetch('api/update', {
@@ -201,7 +262,8 @@
         id: id,
         username: e.parentNode.parentNode.querySelectorAll('td')[1].querySelector('input').value,
         password: e.parentNode.parentNode.querySelectorAll('td')[2].querySelector('input').value,
-        permission: e.parentNode.parentNode.querySelectorAll('td')[3].querySelector('select').value
+        // permission: e.parentNode.parentNode.querySelectorAll('td')[3].querySelector('select').value
+        permission: 0
       })
     }).then(e => e.json()).then(e => {
       toggle('修改成功')
@@ -229,12 +291,12 @@
     // }
     if (name.value === '') {
       toggle('姓名不能为空')
-      td[2].querySelector('input').focus()
+      name.focus()
       return
     }
     if (password.value === '') {
       toggle('密码不能为空')
-      td[1].querySelector('input').focus()
+      password.focus()
       return
     }
     if (checkString(password.value, /^[!#$&(-,.0-:<-\[\]^`-~\-]+$/)) {
@@ -243,11 +305,11 @@
       return;
     }
 
-    if (permission.value === '请选择') {
-      toggle('请选择权限')
-      td[3].querySelector('select').focus()
-      return
-    }
+    // if (permission.value === '请选择') {
+    //   toggle('请选择权限')
+    //   permission.focus()
+    //   return
+    // }
 
     fetch('api/add', {
       method: 'POST',
@@ -258,7 +320,8 @@
         // id: id.value,
         password: password.value,
         username: name.value,
-        permission: permission.value
+        // permission: permission.value
+        permission: 1
       })
     }).then(e => e.json()).then(e => {
       toggle('添加成功')
