--- a/back/templates/manager.html
+++ b/back/templates/manager.html
@@ -118,6 +118,66 @@
       visibility: hidden;
     }
   </style>
+  <style>
+    #side {
+      position: fixed;
+      top: 0;
+      left: 0;
+      transition: 1s;
+      /* display: none; */
+      width: 0px;
+      background-color: rgba(32, 32, 32, .6);
+      ;
+      color: rgb(0, 82, 204);
+      min-height: 100%;
+      /* for the title */
+      overflow-x: hidden;
+      box-shadow: 0 0 10px rgba(0, 82, 204, .5);
+      border-radius: 0 1cm 1cm 0;
+    }
+
+    #side>h2 {
+      margin-top: 50px;
+      font-family: 'Microsoft YaHei';
+      font-size: 1cm;
+    }
+
+    #side>ul {
+      margin-top: 1em;
+
+    }
+
+    #side>ul>li {
+      transition: .3s;
+      padding: 1ch;
+      cursor: pointer;
+      list-style: none;
+      color: rgb(229, 229, 229);
+      font-size: 2em;
+    }
+
+    #side>ul>li:hover {
+      /* font-weight: bold; */
+      color: rgb(0, 255, 255);
+      background-color: rgba(32, 32, 32, .3);
+    }
+
+    #sideButton {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      font-size: 1cm;
+      /* border: solid blue 1q; */
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 30%;
+      cursor: pointer;
+    }
+
+    #side>ul>li:first-child {
+      display: none;
+    }
+  </style>
 </head>
 
 <body>
@@ -136,12 +196,26 @@
     </tr>
   </table>
   <div><button class="page">上一页</button><span>第<strong></strong>页</span><button class="page">下一页</button></div>
+  <span id="sideButton">
+    ☰
+  </span>
+  <div id="side" style="width: 0px;">
+    <h2>
+      欢迎你,<br><span></span>
+    </h2>
+    <ul>
+      <li>管理账户</li>
+      <li>历史记录</li>
+      <li>退出登录</li>
+    </ul>
 
+  </div>
   <!-- </div> -->
 </body>
 
 </html>
 <script>
+  document.querySelector("#side > h2 > span").innerText = localStorage.username;
   let store = {}
   let pageIndex = 0;
   let maxpageIndex = 0;
@@ -253,6 +327,12 @@
     // select.querySelector('select').value = selectData == "管理员" ? "0" : "1"
   }
   function save (id, e) {
+    const result = inputNotNull(e, 1)
+    if (!result) {
+      return
+    }
+    const [name, password] = result
+    // const td = e.parentNode.parentNode.querySelectorAll('td')
     fetch('api/update', {
       method: 'POST',
       headers: {
@@ -260,12 +340,16 @@
       },
       body: JSON.stringify({
         id: id,
-        username: e.parentNode.parentNode.querySelectorAll('td')[1].querySelector('input').value,
-        password: e.parentNode.parentNode.querySelectorAll('td')[2].querySelector('input').value,
+        username: name,
+        password: password,
         // permission: e.parentNode.parentNode.querySelectorAll('td')[3].querySelector('select').value
         permission: 0
       })
     }).then(e => e.json()).then(e => {
+      if (e.code == 400) {
+        toggle('已存在相同用户名')
+        return;
+      }
       toggle('修改成功')
       tableFetch()
     }).catch(e => {
@@ -273,43 +357,11 @@
     })
   }
   function add (e) {
-    const td = e.parentNode.parentNode.querySelectorAll('td')
-    // const id = td[0].querySelector('input')
-    const name = td[0].querySelector('input')
-    const password = td[1].querySelector('input')
-    const permission = td[2].querySelector('select')
-
-    // if (id.value === '') {
-    //   toggle('工号不能为空')
-    //   td[0].querySelector('input').focus()
-    //   return
-    // }
-    // if (checkString(id.value, /^\d+$/)) {
-    //   toggle('账号只能为数字');
-    //   id.focus();
-    //   return;
-    // }
-    if (name.value === '') {
-      toggle('姓名不能为空')
-      name.focus()
+    const result = inputNotNull(e, 0)
+    if (!result) {
       return
     }
-    if (password.value === '') {
-      toggle('密码不能为空')
-      password.focus()
-      return
-    }
-    if (checkString(password.value, /^[!#$&(-,.0-:<-\[\]^`-~\-]+$/)) {
-      toggle('密码格式不正确');
-      password.focus();
-      return;
-    }
-
-    // if (permission.value === '请选择') {
-    //   toggle('请选择权限')
-    //   permission.focus()
-    //   return
-    // }
+    const [name, password] = result
 
     fetch('api/add', {
       method: 'POST',
@@ -318,18 +370,76 @@
       },
       body: JSON.stringify({
         // id: id.value,
-        password: password.value,
-        username: name.value,
+        password: password,
+        username: name,
         // permission: permission.value
         permission: 1
       })
     }).then(e => e.json()).then(e => {
+      if (e.code !== 200) {
+        toggle('已存在相同用户名')
+        return;
+      }
       toggle('添加成功')
       tableFetch()
     }).catch(e => {
       toggle('添加失败')
     })
   };
+  const sideLi = document.querySelectorAll('#side>ul>li')
+  function inputNotNull (e, startIndex) {
+    const td = e.parentNode.parentNode.querySelectorAll('td')
+    // const id = td[0].querySelector('input')
+    const name = td[startIndex].querySelector('input')
+    const password = td[startIndex + 1].querySelector('input')
+    // const permission = td[startIndex+2].querySelector('select')
+    if (name.value === '') {
+      toggle('姓名不能为空')
+      name.focus()
+      return false
+    }
+    if (password.value === '') {
+      toggle('密码不能为空')
+      password.focus()
+      return false
+    }
+    if (checkString(password.value, /^[!#$&(-,.0-:<-\[\]^`-~\-]+$/)) {
+      toggle('密码格式不正确');
+      password.focus();
+      return false
+    }
+    return [
+      // id.value,
+      name.value,
+      password.value,
+      // permission.value
+    ]
+  }
+  const side = document.getElementById('side')
+  document.getElementById('sideButton').onclick = function () {
+    // side.style.display = side.style.display === 'none' ? 'block' : 'none'
+    side.style.width = side.style.width === '0px' ? '200px' : '0px'
+  }
+  sideLi[0].onclick = function () {
+    open('manager', '_self')
+  }
+  sideLi[2].onclick = function () {
+    if (confirm("确定要退出登录吗?")) {
+      fetch('logout').then(() => {
+        localStorage.clear();
+        setTimeout(() => location.href = '/');
+      })
+      // nulls are optional,
+      document.cookie = "userId=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+      document.cookie = "pwd=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+      localStorage.clear();
+      // location.reload();
+      // open('login.html', '_self')
+    }
+  }
+  sideLi[1].onclick = function () {
+    open('history.html', '_self')
+  }
   setTimeout(() => {
     tableFetch()
   });
