--- a/back/templates/manager.html
+++ b/back/templates/manager.html
@@ -174,9 +174,9 @@
       cursor: pointer;
     }
 
-    #side>ul>li:first-child {
+    /* #side>ul>li:first-child {
       display: none;
-    }
+    } */
   </style>
 </head>
 
@@ -204,7 +204,7 @@
       欢迎你,<br><span></span>
     </h2>
     <ul>
-      <li>管理账户</li>
+      <li>返回主页</li>
       <li>历史记录</li>
       <li>退出登录</li>
     </ul>
@@ -421,7 +421,7 @@
     side.style.width = side.style.width === '0px' ? '200px' : '0px'
   }
   sideLi[0].onclick = function () {
-    open('manager', '_self')
+    open('/', '_self')
   }
   sideLi[2].onclick = function () {
     if (confirm("确定要退出登录吗?")) {
