--- a/back/templates/login.html
+++ b/back/templates/login.html
@@ -114,9 +114,9 @@
       </svg></a>
     <div>
       <h1>医学影像识别</h1>
-      <input placeholder="请输入账号">
+      <input placeholder="请输入用户名">
       <input type="password" placeholder="请输入密码">
-      <div><input type="checkbox" id="checkbox"><label for="checkbox">记住密码</label></div>
+      <div><input type="checkbox" id="checkbox"><label for="checkbox">自动登录</label></div>
       <button id="login">登录</button>
     </div>
   </div>
