--- a/back/templates/manager.html
+++ b/back/templates/manager.html
@@ -190,7 +190,7 @@
     </caption>
     <tr>
       <th style="display: none;">工号</th>
-      <th>姓名</th>
+      <th>用户名</th>
       <th>密码</th>
       <th>权限</th>
       <th>操作</th>
