隐藏历史记录按钮

--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -28,6 +28,8 @@
       padding: 0;
       user-select: none;
       transition: .2s;
+      border-radius: 1ch;
+      /* box-shadow: 9q 9q 9q 9q currentColor; */
     }
 
     b {
@@ -346,7 +348,7 @@
     </h2>
     <ul>
       <li>管理账户</li>
-      <li>历史记录</li>
+      <li style="display: none;">历史记录</li>
       <li>退出登录</li>
     </ul>
 
