--- a/back/templates/manager.html
+++ b/back/templates/manager.html
@@ -206,7 +206,7 @@
     </h2>
     <ul>
       <li>返回主页</li>
-      <li>历史记录</li>
+      <li style="display: none;">历史记录</li>
       <li>退出登录</li>
     </ul>
 
