--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -209,10 +209,18 @@
       padding: 0 9q;
     }
 
-    #result>button {
-      margin: 0 9q;
+    #flex-container>div>button {
       padding: 5q 9q;
       cursor: pointer;
+      margin: 9q 0;
+      padding: 0 9q;
+    }
+
+    #flex-container>div>hr {
+      width: 80%;
+      margin: 0 auto;
+      color: blue;
+      border: 1q dashed rgba(0, 0, 255, .5);
     }
 
     .imgBigShow {
@@ -260,7 +268,7 @@
 
     .grid-container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, 256px);
+      grid-template-columns: auto auto;
       justify-items: center;
       justify-content: center;
       margin: 0 auto;
@@ -269,9 +277,14 @@
 
     }
 
+    .grid-container>div:last-child:nth-last-child(1) {
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
+
     .grid-container>div {
-      max-width: 256px;
-      /* max-height: 256px; */
+      max-width: 16em;
+      /* max-height: 16em; */
       border-width: 1q;
       border-style: dotted;
       border-color: rgba(0, 20, 255, .5);
@@ -279,19 +292,30 @@
       border-radius: 2em;
     }
 
-    .grid-container>div>p {
-      font-size: large;
+    #flex-container>div>p {
+      font-size: 1em;
       padding-bottom: 9q;
-      min-width: 256px;
+      min-width: 16em;
+      font-family: kaiti;
+      font-weight: bolder;
     }
 
     button {
       border-radius: 1ch;
     }
 
-    img {
+    .grid-container>img {
       border-radius: 1em;
       cursor: pointer;
+      width: 16rem;
+    }
+
+    #flex-container {
+      display: flex;
+    }
+
+    #flex-container>div {
+      width: 50%;
     }
   </style>
 </head>
@@ -315,14 +339,31 @@
       <div id="result">
         <hr>
         <p class="result">识别结果</p>
-        <div class="grid-container"></div>
+        <div id="flex-container">
+          <div>
+            <p>有伪影</p>
+            <hr>
+            <button>下载</button>
+            <div class="grid-container">
+            </div>
+          </div>
+          <div>
+            <p>无伪影</p>
+            <hr>
+            <button>下载</button>
+            <div class="grid-container">
+            </div>
+          </div>
+
+        </div>
+
         <!-- <table>
           <tr></tr>
           <tr></tr>
         </table> -->
-        <hr>
+        <!-- <hr>
         <p class="result">下载结果</p>
-        <button>有伪影</button><button>无伪影</button>
+        <button>有伪影</button><button>无伪影</button> -->
 
       </div>
 
@@ -378,7 +419,8 @@
   const upload = document.getElementById('upload');
   const sideLi = document.querySelectorAll('#side>ul>li')
   const result = document.getElementById('result')
-  const resultGrid = result.querySelector('.grid-container')
+  const resultFlex = result.querySelector('#flex-container')
+  const gridContainers = resultFlex.querySelectorAll('.grid-container')
   // const resultTableTrs = resultTable.getElementsByTagName('tr');
   const downloadButtons = result.getElementsByTagName('button')
   const imgShow = document.getElementById('imgShow')
@@ -418,7 +460,10 @@
     }).then(e => e.json()).then(e => {
       result.style.display = 'block';
       ReceivedResult.length = 0;
-      resultGrid.innerHTML = '';
+      // resultFlex.innerHTML = '<div><p>有伪影</p><button>下载</button><div class="grid-container"></div></div><div><p>无伪影</p><button>下载</button><div class="grid-container"></div></div>';
+      for (let i of document.getElementsByClassName('grid-container')) {
+        i.innerHTML = ''
+      }
       // for (let i of resultTableTrs) {
       //   i.innerHTML = ''
       // }
@@ -437,10 +482,11 @@
         // }
         for (let i of ReceivedResult) {
           const div = document.createElement('div')
-          div.innerHTML = `<img src="static/${getLastSubstring('.', getLastSegment('/', i.filePath))}.jpg"><p>${i.Artifact ? '有伪影' : '无伪影'}</p>`
-          resultGrid.appendChild(div)
+          div.innerHTML = `<img src="static/${getLastSubstring('.', getLastSegment('/', i.filePath))}.jpg">`
+          // resultFlex.appendChild(div)
+          gridContainers[i.Artifact ^ 1].appendChild(div)
         }
-        for (i of resultGrid.getElementsByTagName('img')) {
+        for (i of resultFlex.getElementsByTagName('img')) {
           i.onclick = function (e) {
             const html = e.target;
             if (imgShow.classList.contains('imgNotShow')) {
