修改图片大小bug

--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -304,10 +304,10 @@
       border-radius: 1ch;
     }
 
-    .grid-container>img {
+    .grid-container>div>img {
       border-radius: 1em;
       cursor: pointer;
-      width: 16rem;
+      width: 256px;
     }
 
     #flex-container {
