--- a/back/templates/manager.html
+++ b/back/templates/manager.html
@@ -175,6 +175,10 @@
       cursor: pointer;
     }
 
+    input::placeholder {
+      color: rgba(0, 0, 0, 0.5);
+    }
+
     /* #side>ul>li:first-child {
       display: none;
     } */
